test/success/option/main.sk
module Main {

fn main() {
    let a = Some(True);
    match a {
        Some(a) -> a,
        None -> False
    };
    let a = None;
    match a {
        Some(a) -> a,
        None -> False
    };
    let a = Some(True);
    match a {
        Some(a) -> assert(a),
        None -> assert(False),
    };
    let a = None;
    match a {
        Some(a) -> assert(a),
        None -> assert(True),
    };
}

}