test/errors/matchcompile/match_redundant_pattern/main.sk
module Main {

fn main() {
    match True {
        True -> (),
        True -> (),
        False -> (),
    };
}

}

